Solved the responsiveness issue on small devices

--- a/CSS/stylingCustomer_homePage.css
+++ b/CSS/stylingCustomer_homePage.css
@@ -931,7 +931,7 @@ h2 {
 
   #header {
     box-shadow: 0px 2px 5px black;
-    height: 15%;
+    
   }
 
   #hiddenMenuButton {
